css/main.css
body {
  background-color: #f5f5f5;
  color: #616161;
  user-select: none;
  transition: background-color 1s, color 1s;
  -webkit-tap-highlight-color: transparent;
}

body {
  min-height: 110%;
}

* {
  outline-color: transparent;
}

.footer {
  width: 100%;
  height: 10px;
  background-color: #151515;
  color: #ffffff;
  padding: 0 .6em 150px;
  margin-top: 33vh;
  position: static;
  transition: background-color 1s;
}

::-webkit-scrollbar {
  background-color: #393939;
}

::-webkit-scrollbar-thumb {
  background-color: #ffffff;
}

::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

::-webkit-scrollbar-thumb {
  border-radius: 4px;
}

::-webkit-scrollbar-track {
  background-color: #424242;
}

.left {
  float: left;
}

.right {
  float: right;
}

.center-align {
  text-align: center;
}

.vertical-center {
  margin: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.side-scroll, .mobile-scroll {
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  overflow-x: auto;
  overflow-y: hidden;
}

.result-switch button {
  margin: 6px 9px;
  background-color: #ff9900;
}

.nav-menu-content > div, .bottom-bar > .flex, .footer > div {
  max-width: 1440px;
  margin: 0 auto;
}

.nav-menu,
.nav-menu-content {
  background-color: #ffffff;
  height: 50px;
  transition: background-color 1s;
}

.nav-menu-content > div {
  height: inherit;
}

.nav-button.pseudo {
  color: #ffffff;
}

.nav-search {
  width: 626px;
  max-width: 50%;
  position: relative;
  float: right;
}

.nav-search input {
  background-color: #e7e7e7;
  color: #151515;
  border: none;
  opacity: 0;
  width: 40px;
  float: right;
}

.nav-search input:focus {
  width: 100%;
}

.nav-buttons {
  max-width: 40%;
  float: right;
  right: 51px;
  position: absolute;
  white-space: nowrap;
}

.nav-buttons a, .nav-buttons button {
  background-color: transparent;
  color: #ff9900;
  transition: color 1s;
}

@media only screen and (max-width: 767px) {
  .dropdown-content {
    display: none;
    background-color: #ffffff;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }

  .dropdown-content a {
    color: #000000;
    padding: 12px 16px;
    display: block;
  }

  .dropdown-content a:hover {
    background-color: #f1f1f1
  }

  .dropdown:hover .dropdown-content {
    display: block;
  }
}

@media only screen and (min-width: 767px) {
  .dropbtn {
    display: none;
  }
}

@media only screen and (min-width: 768px) {
  .nav-search input {
    width: 100%;
    opacity: 1;
  }

  .nav-search input:focus {
    width: 100%;
  }

  .nav-buttons {
    position: static;
    max-width: 27%;
  }

  .result-switch.mobile-scroll {
    display: flex;
    flex-wrap: wrap;
    overflow-x: visible;
    overflow-y: visible;
  }
}

.nav-search i {
  color: #9e9e9e;
  float: right;
  position: absolute;
  right: 10px;
  top: 10px;
  transition: color 1s;
}

.nav-search,
.nav-search input {
  height: 100%;
}

.content-wrapper-container.flex {
  max-width: 1390px;
  margin: 0 auto;
}

.content-wrapper {
  position: relative;
  max-width: 1390px;
  margin: 0 auto;
  padding-bottom: 80px;
}

.bottom-bar {
  width: 100%;
  height: 60px;
  background-color: #151515;
  position: fixed;
  bottom: 0;
  text-align: center;
  padding-top: .2em;
  transition: background-color 1s;
}

.bottom-bar-button {
  text-align: center;
  color: #b0b0b0;
  cursor: pointer;
}

.flex .flex-padding-reset {
  padding-left: 0;
  padding-right: 0;
}

.center-element {
  margin: 0 auto;
  display: block;
}

.left-divider {
  border-left: 1px solid rgba(189, 189, 189, 0.2);
}

.right-divider {
  border-right: 1px solid rgba(189, 189, 189, 0.2);
}

.top-divider {
  border-top: 1px solid rgba(189, 189, 189, 0.2);
}

.bottom-divider {
  border-bottom: 1px solid rgba(189, 189, 189, 0.2);
}

.pointer {
  cursor: pointer;
}

.dismiss-overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  z-index: -1;
}

